
* modified mscjs and multistate.tpl file so fixed parameters can be included and design
matrix can be simplified to speed up execution times.

* added function setup_admb to simplify calling code like cjs and mscjs and standardize handling
of compile, clean arguments and use of existing admb executables in the marked package directory.

CHANGES

* pull request merged from Brett McClintock for probit.cjs. Changes Bayesian updating.

* all values for a parameter can be fixed (e.g., S=1 or delta=1). This used to cause problems but now if
all values are fixed, a message is given that the formula is being reset to ~0 which has no parameters. Likewise,
if formula is ~0 and not all values are fixed then an error is generated. 

* The above change made it possible to allow an mvmscjs specification in which all states are certain. In which case,
no design data is generated for the delta parameter.


marked 1.1.11 7 March 2016
-----------------

NEW FEATURES

* can now add sigmaPhi and sigmap to list of initial values for random effects CJS model. If none are specified, initial values are now set to -2 instead of 0.1

BUG FIXES

* patched create.dm which was leaving out one record when chunking through design data. This caused failure when using splines.

* beta v-c matrix not being properly stored on CJS with use.admb=TRUE

* modified cjs so it doesn't check for tplcpp before running admb. This was stopping it from using admb on Linux.

* run=FALSE was not working for non-HMM models because initial.list was not assigned.

* fixed bug that was preventing real predictions from being included in results where appropriate.

CHANGES

* in crm.wrapper if a model with the same name is stored externally in the workspace it will load that file and use it as initial values unless the initial argument has been specified in the call.

* modified crmlist_fromfiles and model.table to prevent issues with lack of memory by removing models after loading. 
